--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: My Blog
 description: This is my personal blog using Jekyll.
-theme: jekyll-theme-devlopr-jekyll
+theme: jekyll-theme-devlopr
