--- a/_config.yml
+++ b/_config.yml
@@ -1,98 +1,3 @@
-# Site settings
-title: Progga's Developer Blog
-subtitle: A Portfolio Jekyll Theme Built for Developers
-description: A blog using the Devlopr theme.
-url: "https://progga004.github.io"
-baseurl: "" # Use '/' if you want to deploy under a subpath
-
-# Theme settings
-theme: devlopr
-
-# Navigation
-urls:
-  - text: Home
-    url: /
-  - text: About
-    url: /about
-  - text: Blog
-    url: /blog
-  - text: Gallery
-    url: /gallery
-  - text: Shop
-    url : /shop
-  - text: Contact
-    url : /contact
-
-# Author details
-author_logo: profile.png
-author: Progga
-author_bio: Hi, my name is Progga. I built this site using the Devlopr theme :D
-author_email: "your-email@example.com"
-author_location: Your Location
-author_website_url: "https://your-website.com"
-
-# Experiences, Education, and Projects (modify as needed)
-author_work_experiences:
-  - company_name: Google
-    company_logo: google.png
-    company_url: https://google.com
-    designation: Software Engineer
-    description: Worked on various Google Products
-    visibility: true
-  - company_name: Microsoft
-    company_logo: microsoft.png
-    company_url: https://microsoft.com
-    designation: Azure Developer
-    description: Worked on various Azure Cloud Products
-    visibility: true
-
-author_education_details:
-  - college_logo: mit.png
-    college_name: MIT
-    college_url: https://mit.edu
-    college_degree: CS Engineer
-    description: Bachelor of Technology
-    visibility: true
-
-author_project_details:
-  - project_thumbnail: project1.png
-    project_title: Project 1
-    project_description: Description of Project 1
-    project_url: https://project1.com
-    visibility: true
-
-# Social links
-twitter_username: your_twitter
-github_username:  your_github_username
-instagram_username: your_instagram
-
-# Other settings
-markdown: kramdown
-highlighter: rouge
-permalink: pretty
-
-# Pagination settings
-paginate: 4
-per_page: 4
-paginate_path: "/blog/page/:num/"
-
-# Plugins (these are necessary for the theme to work properly)
-plugins:
-  - jekyll-paginate
-  - jekyll-gist
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-feed
-
-# Exclusions and other configurations
-exclude:
-  - .sass-cache/
-  - .jekyll-cache/
-  - node_modules/
-  - vendor/
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-
-# Destination for build
-destination: ./build
+title: My Blog
+description: This is my personal blog using Jekyll.
+remote_theme: devlopr
